added toolbar menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PopUpShops_BuyerSide</string>
     <string name="buyer">buyer</string>
     <string name="vendor">vendor</string>
+    <string name="action_settings">Settings</string>
 </resources>
